--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "mongoose-transactions": "^1.1.4"
   }
 }
