--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
